Enhance container functionality: remove max attributes from input fields, update shelf handling in container data, and adjust UI to reflect shelf information.

--- a/index.html
+++ b/index.html
@@ -205,20 +205,20 @@
               <div class="inputs">
                 <div>
                   <p class="inputLabel">Width</p>
-                  <input type="number" min="0" max="16" step="0.01" id="containerWidth" class="input" required>
+                  <input type="number" min="0" step="0.01" id="containerWidth" class="input" required>
                 </div>
                 <div>
                   <p class="inputLabel">Height </p>
-                  <input type="number" min="0" max="4" step="0.01" id="containerHeight" class="input" required>
+                  <input type="number" min="0" step="0.01" id="containerHeight" class="input" required>
                 </div>
                 <div>
                   <p class="inputLabel">Length </p>
-                  <input type="number" min="0" max="3" step="0.01" id="containerLenght" class="input" required>
+                  <input type="number" min="0" step="0.01" id="containerLenght" class="input" required>
                 </div>
 
                 <div>
                   <p class="inputLabel">Shelves</p>
-                  <input type="number" min="1" max="20" step="1" id="containerShelves" class="input" value="4" required>
+                  <input type="number" min="1" step="1" id="containerShelves" class="input" value="4" required>
                 </div>
 
 
@@ -249,15 +249,15 @@
               <div class="inputs">
                 <div>
                   <p class="inputLabel">Width</p>
-                  <input type="number" min="0" max="5" step="0.01" id="packWidth" class="input" required>
+                  <input type="number" min="0" step="0.01" id="packWidth" class="input" required>
                 </div>
                 <div>
                   <p class="inputLabel">Height </p>
-                  <input type="number" min="0" max="4" step="0.01" id="packHeight" class="input" required>
+                  <input type="number" min="0" step="0.01" id="packHeight" class="input" required>
                 </div>
                 <div>
                   <p class="inputLabel">Length </p>
-                  <input type="number" min="0" max="3" step="0.01" id="packLenght" class="input" required>
+                  <input type="number" min="0" step="0.01" id="packLenght" class="input" required>
                 </div>
               </div>
               <div class="inputs">
@@ -366,7 +366,7 @@
       <form class="pack-detail pack-detail-close" id="packDetail">
 
         <div class="pack-detail-up">
-          <p>Item Detail <span id="packStatut"></span></p>
+          <p>Colis Detail <span id="packStatut"></span></p>
           <i class="fa-solid fa-circle-plus" id="openPackDetail"></i>
         </div>
 
@@ -381,15 +381,15 @@
           <div class="inputs">
             <div>
               <p class="inputLabel">Width</p>
-              <input type="number" min="0" max="5" step="0.01" id="pack_Detail_Width" class="input" required>
+              <input type="number" min="0" step="0.01" id="pack_Detail_Width" class="input" required>
             </div>
             <div>
               <p class="inputLabel">Height </p>
-              <input type="number" min="0" max="4" step="0.01" id="pack_Detail_Height" class="input" required>
+              <input type="number" min="0" step="0.01" id="pack_Detail_Height" class="input" required>
             </div>
             <div>
               <p class="inputLabel">Lenght </p>
-              <input type="number" min="0" max="3" step="0.01" id="pack_Detail_Lenght" class="input" required>
+              <input type="number" min="0" step="0.01" id="pack_Detail_Lenght" class="input" required>
             </div>
           </div>
 
@@ -458,7 +458,7 @@
 
       <!-- number of boxes controller -->
       <div class="range hidden">
-        <input type="range" min="0" max="" step="1" value="0" id="numberBox" disabled>
+        <input type="range" min="0" step="1" value="0" id="numberBox" disabled>
       </div>
       <!-- number of boxes controller -->
 
