Remove priority handling and routes feature from the application

--- a/index.html
+++ b/index.html
@@ -269,11 +269,7 @@
                   <p class="inputLabel">StackingCapacity </p>
                   <input type="number" min="-1" id="packStackingCapacity" class="input" value="-1" required>
                 </div>
-                <div>
-                  <p class="inputLabel">Priority </p>
-                  <select id="packPriority" class="pack_priorities input" required>
-                  </select>
-                </div>
+                <!-- priority removed -->
               </div>
 
 
@@ -402,10 +398,7 @@
               <p class="inputLabel">StackingCapacity </p>
               <input type="number" min="-1" id="pack_Detail_StackingCapacity" class="input" required>
             </div>
-            <div>
-              <p class="inputLabel">Priority </p>
-              <select id="pack_Detail_Priority" class="pack_priorities input" required></select>
-            </div>
+            <!-- priority removed -->
           </div>
 
           <p class="inputLabel">Rotation </p>
